crates/swift-bridge-macro/tests/ui/incorrect-argument-type.stderr
error[E0308]: mismatched types
  --> tests/ui/incorrect-argument-type.rs:12:16
   |
12 |         fn fn1(arg: &str);
   |                ^^^^^^ expected `u16`, found `&str`
